# evaluation_center

./: .env.example  .gitattributes  .gitignore  pyproject.toml
app/: __init__.py  main.py
app/api/: router.py
app/core/: settings.py
app/db/: __init__.py  dependencies.py  engine.py
app/infra/: __init__.py
app/infra/http_client/: __init__.py  client.py  dependencies.py
app/repositories/: __init__.py  base.py  models.py
docs/: database.md
scripts/: __init__.py  db_models.py
tests/: test_database_engine.py  test_health.py  test_http_client.py  test_model_codegen.py  test_repositories.py  test_settings.py
