[project]
name = "evaluation-center"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]


[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.ruff]
target-version = "py312"
line-length = 100