[project]
name = "evaluation-center"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.10",
    "fastapi[standard]>=0.139.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "pymysql>=1.1.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "sqlacodegen>=4.0.4",
]


[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "integration: requires an external service",
    "mysql: requires a dedicated MySQL test database",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
